gcc/testsuite/rust/rustc/ui/liveness/liveness-use-after-move_dg.rs
fn main() {

    let x: Box<_> = 5.into();
    let y = x;

    println!("{}", *x); // { dg-error ".E0382." "" { target *-*-* } }
    y.clone();
}

